--- a/contact_page.html
+++ b/contact_page.html
@@ -42,17 +42,17 @@
 
       </li>
       <li class="nav-item">
-        <a class="nav-link" href = ".../about_page.html"> About</a></a>
+        <a class="nav-link" href = "about_page.html"> About</a></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href = "pages/main_page.html"> Main</a></a>
+        <a class="nav-link" href = "main_page.html"> Main</a></a>
       </li>
       <li class="nav-item">
-      <a class="nav-link" href= "pages/contact_page.html"> Contacts</a></a>
+      <a class="nav-link" href= "contact_page.html"> Contacts</a></a>
       </li>
     </ul>
   </div>
-    <button class = "btn"><a href = "pages/login_page.html"> LOGIN</a></a></button>
+    <button class = "btn"><a href = "login_page.html"> LOGIN</a></a></button>
 
 
   </div>
