--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
 
 <nav class="navbar navbar-expand-sm bg-transparent navbar-dark">
+  <div class = "container">
   <a class="navbar-brand" href="index.html"><img src = "images/logo.png" alt = "Logo"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
@@ -45,16 +46,16 @@
         <a class="nav-link" href = "about_page.html"> About</a></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href = "pages/main_page.html"> Main</a></a>
+        <a class="nav-link" href = "main_page.html"> Main</a></a>
       </li>
       <li class="nav-item">
-      <a class="nav-link" href= "pages/contact_page.html"> Contacts</a></a>
+      <a class="nav-link" href= "contact_page.html"> Contacts</a></a>
       </li>
     </ul>
   </div>
-    <button class = "btn"><a href = "pages/login_page.html"> LOGIN</a></a></button>
+    <button class = "btn"><a href = "login_page.html"> LOGIN</a></a></button>
 
-
+</div>
   </div>
 </nav>
 
