--- a/about_page.html
+++ b/about_page.html
@@ -37,55 +37,48 @@
 
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav">
-      <li class="nav-item">
+      <li class="nav-item active">
         <a class="nav-link" href= "index.html"> Home</a></a>
 
       </li>
-      <li class="nav-item active">
+      <li class="nav-item">
         <a class="nav-link" href = "about_page.html"> About</a></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href = "pages/main_page.html"> Main</a></a>
+        <a class="nav-link" href = "main_page.html"> Main</a></a>
       </li>
       <li class="nav-item">
-      <a class="nav-link" href= "pages/contact_page.html"> Contacts</a></a>
+      <a class="nav-link" href= "contact_page.html"> Contacts</a></a>
       </li>
     </ul>
   </div>
-    <button class = "btn"><a href = "pages/login_page.html"> LOGIN</a></a></button>
+    <button class = "btn"><a href = "login_page.html"> LOGIN</a></a></button>
 
 
   </div>
 </nav>
 
 
-
-
-
-  <div class="jumbotron">
-    <h1>“Nobody can discover the world for somebody else. Only when we discover it for ourselves does it become common ground and a common bond and we cease to be alone.” – Wendell Berrys</h1>
-
     <div class = "colorchange">
     <h1> Main Page </h1><br>
     <div class="container">
       <div class="card" style="width:400px">
-        <img class="card-img-top" src="images/hanbok.jpg" alt="culture" style="width:100%">
+        <img class="card-img-top" src="images/korea.jpg" alt="about" style="width:100%">
         <div class="card-body">
-          <h4 class="card-title">Culture</h4>
+          <h4 class="card-title">About</h4>
           <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-          <a href="pages/culture.html" class="btn btn-primary">Click to learn more about culture</a>
+
         </div>
       </div>
       <br>
 
-  </div>
 
 
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur varius aliquam bibendum. Nulla condimentum justo eget ante tristique, a commodo neque lobortis. Donec vulputate posuere rhoncus. Nulla quis convallis dui, vitae gravida eros.</p>
+
     </div>
   </div>
-</div>
-</center>
+
+
   <div class="jumbotron" style ="margin-bottom:0">
     <p>Copyright &copy; 2021 Remi Hayashi | All rights reserved              </p>
     <p><a href = "">Term of Use</a> and <a href = "">Privacy Statement</a></p>
