--- a/main_page.html
+++ b/main_page.html
@@ -37,27 +37,26 @@
 
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav">
-      <li class="nav-item active">
+      <li class="nav-item">
         <a class="nav-link" href= "index.html"> Home</a></a>
 
       </li>
       <li class="nav-item">
         <a class="nav-link" href = "about_page.html"> About</a></a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href = "pages/main_page.html"> Main</a></a>
+      <li class="nav-item active">
+        <a class="nav-link" href = "main_page.html"> Main</a></a>
       </li>
       <li class="nav-item">
-      <a class="nav-link" href= "pages/contact_page.html"> Contacts</a></a>
+      <a class="nav-link" href= "contact_page.html"> Contacts</a></a>
       </li>
     </ul>
   </div>
-    <button class = "btn"><a href = "pages/login_page.html"> LOGIN</a></a></button>
+    <button class = "btn"><a href = "login_page.html"> LOGIN</a></a></button>
 
 
   </div>
 </nav>
-
 
 
 
