--- a/login_page.html
+++ b/login_page.html
@@ -1,58 +1,145 @@
-<!Doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
+<!-- DEVELOPER: Remi Hayashi, IS117-003, Fall 2021 -->
+<!-- DEVELOPER: Remi Hayashi, IS117-003, Fall 2021 -->
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Your Study Abroad Roommate</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel = "stylesheet" href="styles/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=DM+Sans&family=Kaushan+Script&display=swap" rel="stylesheet">
-  <body>
-    <!--<link rel = "stylesheet" href="styles/main.css">-->
-    <style>
-
-    body{
-      font-family: 'DM Sans', sans-serif;
-      text-transform: uppercase;
-      /*text-transform: uppercase;*/
-    }
-    *{
-      padding:0;
-      margin:0;
-      box-sizing:border-box;
-      background-color:
-
-      text-transform: uppercase;
-
-    }
-
-    .button{
-      text-align: center;
-      padding: 30px 20px;
-
-      font-size: 19px;
-      text-decoration: none;
-      display: inline-block;
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans&family=Kaushan+Script&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
 
 
-    }
-    .button h2{
-      font-family: 'DM Sans', sans-serif;
-      text-transform: uppercase;
-    }
+<body>
+    <center>
+  <div class = "title-image">
+  <img src = "images/korea.png" alt = "study">
+  <div class = "text-image">
+    <h1>Your Study Abroad Roommate</h1>
+  </div>
 
 
-    .button:hover {
-      background-color: #a89276;
-      color: white;
-}
-    </style>
+
+<nav class="navbar navbar-expand-sm bg-transparent navbar-dark">
+  <a class="navbar-brand" href="index.html"><img src = "images/logo.png" alt = "Logo"></a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="collapsibleNavbar">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href= "index.html"> Home</a></a>
+
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href = "about_page.html"> About</a></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href = "main_page.html"> Main</a></a>
+      </li>
+      <li class="nav-item">
+      <a class="nav-link" href= "contact_page.html"> Contacts</a></a>
+      </li>
+    </ul>
+  </div>
+    <button class = "btn"><a href = "login_page.html"> LOGIN</a></a></button>
 
 
-  </head>
+  </div>
+</nav>
+       <style>
+
+       body{
+         font-family: 'DM Sans', sans-serif;
+         text-transform: uppercase;
+         /*text-transform: uppercase;*/
+       }
+       *{
+         padding:0;
+         margin:0;
+         box-sizing:border-box;
+         background-color:
+
+         text-transform: uppercase;
+
+       }
+
+       .button{
+         text-align: center;
+         padding: 30px 20px;
+
+         font-size: 19px;
+         text-decoration: none;
+         display: inline-block;
+
+
+       }
+       .button h2{
+         font-family: 'DM Sans', sans-serif;
+         text-transform: uppercase;
+       }
+
+
+       .button:hover {
+         background-color: #a89276;
+         color: white;
+   }
+       </style>
+
+
+
+</head>
+
+
+<body>
+    <center>
+  <div class = "title-image">
+  <img src = "images/korea.png" alt = "study">
+  <div class = "text-image">
+    <h1>Your Study Abroad Roommate</h1>
+  </div>
+
+
+
+<nav class="navbar navbar-expand-sm bg-transparent navbar-dark">
+  <a class="navbar-brand" href="index.html"><img src = "images/logo.png" alt = "Logo"></a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="collapsibleNavbar">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href= "index.html"> Home</a></a>
+
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href = "about_page.html"> About</a></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href = "main_page.html"> Main</a></a>
+      </li>
+      <li class="nav-item">
+      <a class="nav-link" href= "contact_page.html"> Contacts</a></a>
+      </li>
+    </ul>
+  </div>
+    <button class = "btn"><a href = "login_page.html"> LOGIN</a></a></button>
+
+
+  </div>
+</nav>
   <body>
     <section class = "login">
       <div class = "container">
