--- a/about_page.html
+++ b/about_page.html
@@ -37,11 +37,11 @@
 
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav">
-      <li class="nav-item active">
+      <li class="nav-item">
         <a class="nav-link" href= "index.html"> Home</a></a>
 
       </li>
-      <li class="nav-item">
+      <li class="nav-item active">
         <a class="nav-link" href = "about_page.html"> About</a></a>
       </li>
       <li class="nav-item">
@@ -60,7 +60,7 @@
 
 
     <div class = "colorchange">
-    <h1> Main Page </h1><br>
+    <h1> About</h1><br>
     <div class="container">
       <div class="card" style="width:400px">
         <img class="card-img-top" src="images/korea.jpg" alt="about" style="width:100%">
