--- a/contact_page.html
+++ b/contact_page.html
@@ -37,7 +37,7 @@
 
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav">
-      <li class="nav-item active">
+      <li class="nav-item">
         <a class="nav-link" href= "index.html"> Home</a></a>
 
       </li>
@@ -48,7 +48,7 @@
         <a class="nav-link" href = "main_page.html"> Main</a></a>
       </li>
       <li class="nav-item">
-      <a class="nav-link" href= "contact_page.html"> Contacts</a></a>
+      <a class="nav-link active" href= "contact_page.html"> Contacts</a></a>
       </li>
     </ul>
   </div>
@@ -57,14 +57,35 @@
 
   </div>
 </nav>
+<div class = "whole"><br><br><br>
+<h2> Contact Form </h2>
+
+<div class = "container">
+  <form class = row g-4>
+    <div class = "col-md-6">
+      <label form = "FirstName" class = "form-label">First Name </label>
+      <input type = "text" class = "form-control" id= "FirstName">
+    </div><br><br>
+    <br>
+    <div class = "col-md-6">
+      <label form = "LastName" class = "form-label">Last Name </label>
+      <input type = "text" class = "form-control" id= "LasttName">
+    </div><br><br><br>
+    <div class = "col-md-6">
+      <label form = "Email" class = "form-label">Email</label>
+      <input type = "text" class = "form-control" id= "Email">
+    </div>
+  <center>
+    <a href="#" class="button">Submit</a>
+</center>
+  </form>
+</div>
+
+<p>      </p><br><br><br>
 
 
 
-
-
-
-
-
+</div>
 
 
 
