--- a/login_page.html
+++ b/login_page.html
@@ -1,5 +1,4 @@
 <!-- DEVELOPER: Remi Hayashi, IS117-003, Fall 2021 -->
-<!-- DEVELOPER: Remi Hayashi, IS117-003, Fall 2021 -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -38,7 +37,7 @@
 
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav">
-      <li class="nav-item active">
+      <li class="nav-item">
         <a class="nav-link" href= "index.html"> Home</a></a>
 
       </li>
@@ -49,7 +48,7 @@
         <a class="nav-link" href = "main_page.html"> Main</a></a>
       </li>
       <li class="nav-item">
-      <a class="nav-link" href= "contact_page.html"> Contacts</a></a>
+      <a class="nav-link active" href= "contact_page.html"> Contacts</a></a>
       </li>
     </ul>
   </div>
@@ -58,123 +57,45 @@
 
   </div>
 </nav>
-       <style>
+<div class = "whole"><br><br><br>
+<h2>Welcome Back! Log In!</h2>
 
-       body{
-         font-family: 'DM Sans', sans-serif;
-         text-transform: uppercase;
-         /*text-transform: uppercase;*/
-       }
-       *{
-         padding:0;
-         margin:0;
-         box-sizing:border-box;
-         background-color:
+<div class = "container">
+  <form class = row g-4>
+    <div class = "col-md-6">
+      <label form = "Username" class = "form-label">Username</label>
+      <input type = "text" class = "form-control" id= "Username">
+    </div><br><br>
+    <br>
+    <div class = "col-md-6">
+      <label form = "Password" class = "form-label">Password</label>
+      <input type = "text" class = "form-control" id= "Password">
+    </div><br><br><br>
+  
+  <center>
+    <a href="#" class="button">Submit</a>
+</center>
+  </form>
+</div>
 
-         text-transform: uppercase;
-
-       }
-
-       .button{
-         text-align: center;
-         padding: 30px 20px;
-
-         font-size: 19px;
-         text-decoration: none;
-         display: inline-block;
-
-
-       }
-       .button h2{
-         font-family: 'DM Sans', sans-serif;
-         text-transform: uppercase;
-       }
-
-
-       .button:hover {
-         background-color: #a89276;
-         color: white;
-   }
-       </style>
+<p>      </p><br><br><br>
 
 
 
-</head>
+</div>
 
 
-<body>
-    <center>
-  <div class = "title-image">
-  <img src = "images/korea.png" alt = "study">
-  <div class = "text-image">
-    <h1>Your Study Abroad Roommate</h1>
+
+
+
+  <div class="jumbotron" style ="margin-bottom:0">
+    <p>Copyright &copy; 2021 Remi Hayashi | All rights reserved              </p>
+    <p><a href = "">Term of Use</a> and <a href = "">Privacy Statement</a></p>
+
+    <a href="https://www.facebook.com/" class="fa fa-facebook" ></a>
+    <a href="https://twitter.com/?lang=en" class="fa fa-twitter"></a>
   </div>
 
 
-
-<nav class="navbar navbar-expand-sm bg-transparent navbar-dark">
-  <a class="navbar-brand" href="index.html"><img src = "images/logo.png" alt = "Logo"></a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="collapsibleNavbar">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href= "index.html"> Home</a></a>
-
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href = "about_page.html"> About</a></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href = "main_page.html"> Main</a></a>
-      </li>
-      <li class="nav-item">
-      <a class="nav-link" href= "contact_page.html"> Contacts</a></a>
-      </li>
-    </ul>
-  </div>
-    <button class = "btn"><a href = "login_page.html"> LOGIN</a></a></button>
-
-
-  </div>
-</nav>
-  <body>
-    <section class = "login">
-      <div class = "container">
-        <div class = "login_words text-center py-5">
-          <h1> Login In!</h1>
-        </div>
-
-
-          <form>
-              <div class = "form-row py-3 text-center">
-                <div class = "offset">
-                <input type = "username" class "" placeholder = "Username">
-              </div>
-              <div class = "form-row py-3 text-center">
-                <div class = "offset">
-                  <input type = "password" class = "" placeholder = "Password">
-
-                  <div class = "offset">
-                <div class = "button py-3 py-5 text-center">
-                  <button class = "btn1"><h2>Sign Up</h2></button>
-                </div>
-                </div>
-                </div>
-              </div>
-
-            </div>
-          </form>
-
-
-      </div>
-    </section>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
-
-
-
-  </body>
+</body>
 </html>
