--- a/main_page.html
+++ b/main_page.html
@@ -72,7 +72,7 @@
       <div class="card-body">
         <h4 class="card-title">Culture</h4>
         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        <a href="pages/culture.html" class="btn btn-primary">Click to learn more about culture</a>
+        <a href="culture.html" class="btn btn-primary">Click to learn more about culture</a>
       </div>
     </div>
     <br>
@@ -83,7 +83,7 @@
       <div class="card-body">
         <h4 class="card-title">Study Abroad</h4>
         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        <a href="pages/studyabroad.html" class="btn btn-primary">Curious about Study Abroad? Click here</a>
+        <a href="studyabroad.html" class="btn btn-primary">Curious about Study Abroad? Click here</a>
       </div>
     </div>
   </div>
