--- a/index.html
+++ b/index.html
@@ -99,16 +99,22 @@
     <p class="card-text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
     <a href="language.html" class="btn btn-primary">Learn more about Korea's Language</a>
   </div>
+</div><br><br><br>
 </div>
 </div>
+
+<div class="jumbotron">
+  <h2> Vision Board made by the Author</h2>
+  <img src = "images/vision.png" alt="vision board" width="450" height="300">
 </div>
 
 
 <div class="container" style="margin-top:30px">
   <div class="row">
 
+<br><br>
     <div>
-      <video class = "center" src = "video/playlist.mp4" width="640" height="360"></video>
+
       <video width="320" height="240" controls>
   <source src="video/playlist.mp4" type="video/mp4">
 
@@ -119,7 +125,7 @@
           </p>
 
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur varius aliquam bibendum. Nulla condimentum justo eget ante tristique, a commodo neque lobortis. Donec vulputate posuere rhoncus. Nulla quis convallis dui, vitae gravida eros.</p>
-    </div>
+    </div><br><br><br><br>
   </div>
 </div>
 </center>
